# MANTIS-OBC-AI-core

./: .gitignore  CMakeLists.txt  createVirtualPorts.sh  create_links.sh  format.sh  log.txt  readme.md
.cache/clangd/index/: client.cpp.31F774AFF4F47CD7.idx  client.cpp.84FA3D5FA3ED5EE7.idx  initSystem.cpp.F31EB88F4A35375E.idx  initSystem.h.7AF37FAB8602FCE2.idx  messageIO.cpp.182C6C404B5B33DF.idx  messageIO.h.08A226CCDB73D31D.idx  server.cpp.E53157778C01CD62.idx  server.cpp.F374FC191CFA106F.idx  uart.cpp.1FBD5C7EBF7ECBA3.idx  uart.cpp.5FDC7F2AD027630B.idx  uart.h.B3A632F0D3266491.idx  uart.hpp.E83F9CD6AB898361.idx  uartReadLoop.cpp.F6D336978733653C.idx  uartReadLoop.h.13357E2924AAEADD.idx
include/: ethernet.h  initSystem.cpp  initSystem.h  messageIO.cpp  messageIO.h  uart.cpp  uart.h  uartReadLoop.cpp  uartReadLoop.h
include/utils/: constants.h  logger.h
proto/: protocol.proto
scripts/: create_links.sh  run_all.sh
src/: client.cpp  obc_ai.cpp  obc_micro.cpp  payload.cpp  server.cpp  uart.cpp  uart.hpp
src/apps/: obc_ai.cpp
src/core/: command_handling.cpp  command_handling.h  uart_init.cpp  uart_init.h
src/network/: ethernet.cpp  ethernet.h  uart.cpp  uart.h
src/pipeline/: main.py  requirements.txt  utils.py
src/pipeline/algal_bloom/: algal_bloom.py
src/pipeline/algal_bloom/models/: lgbm_model.pkl
src/pipeline/h3_partitioning/: h3_demo.py  h3_partition.py
src/pipeline/tree_phenology/: tree_phenology.py
src/python/: algal_bloom.py  h3_partition.py  main.py  requirements.txt  tree_phenology.py  utils.py
src/python/models/: model_metrics.txt
src/utils/: constants.h  logger.cpp  utils.cpp  utils.h
